# pms-scanner

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: launchd-setup.md  systemd-setup.md
launchd/: io.mpsinc.pms-scanner.plist
scanner/: __main__.py  api.py  batch.py  config.py  dashboard.py  machine.py  ntp.py  pdf_processor.py  scheduler.py  state.py  store.py  uploader.py  watcher.py
scripts/: dc.sh
scripts/linux/: pms-scanner-correct-clock
scripts/macos/: pms-scanner-correct-clock
specs/001-folder-monitor-upload/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-upload-progress-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-we-watch-all/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-multi-env-uploads/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
systemd/: pms-scanner.service
tests/: conftest.py
tests/contract/: test_upload_contract.py
tests/integration/: test_batch_integration.py  test_dashboard_integration.py  test_dashboard_multi_env.py  test_dual_env_run.py  test_ntp_gate.py  test_two_machine_simulation.py  test_watcher_integration.py
tests/unit/: test_api.py  test_batch.py  test_batch_per_machine.py  test_config.py  test_config_multi_env.py  test_coverage_gaps.py  test_machine.py  (+12 more)
(+12 files in other folders)
